--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -198,7 +198,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="{{ url_for('admin_evening_master') }}" class="nav-link">
+                <a href="{{ url_for('evening_master') }}" class="nav-link">
                     <i class="fa-solid fa-moon"></i> Evening Master
                 </a>
             </li>
@@ -290,3 +290,4 @@
     {% block page_scripts %}{% endblock %}
 </body>
 </html>
+
